--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -19,3 +19,14 @@ jobs:
       - name: Scan for secrets
         run: |
           detect-secrets scan --all-files
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{secrets.SNYK_TOKEN}}
+        with:
+          args: '--sarif-file-output=snyk.sarif'
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk.sarif
